--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
   </head>
 
   <body>
+    <header></header>
+    <main>
     <%= yield %>
+    </main>
+    <footer></footer>
   </body>
 </html>
